package com.example.schema;

/**
 * Standalone author element
 * Generated from XSD schema
 */
public class Author {

    public Author() {
    }

}